# BlueRecording

./: .gitignore  README.md  pyproject.toml  pytest.ini  setup.py  setup.sh  setup_old.py
.github/workflows/: ci.yml  codeql_old.yml
bluerecording/: __init__.py  cli.py  getPositions.py  get_positions.py  utils.py  writeH5.py  writeH5_prelim.py
examples/circuitTest/: ReadMe.md
examples/circuitTest/data/: positions0_ref.pkl
examples/circuitTest/data/getPositions/: GetPositions.sh
examples/circuitTest/data/getPositions/positions/0/: positions0.pkl
examples/circuitTest/test/electrodeFile/: WriteH5.sh
examples/compare-to-reference-solutions/: ReadMe.md
examples/compare-to-reference-solutions/data/reporting/: spikes.h5  voltage.h5
examples/scripts/: ReadMe.md  run_get_positions.py  run_write_weights.py
tests/: conftest.py  test_getPositions_SONATA.py  test_h5_initialization_SONATA.py  test_utils.py  test_writeH5_SONATA.py
tests/unit/: test_getPositions_SONATA.py  test_get_positions.py  test_h5_initialization_SONATA.py  test_h5py_MPI.py  test_utils.py  test_writeH5_SONATA.py
